--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Game Project Shell</title>
+<title>Don't Get Got</title>
 <script type="text/javascript" src="./gameengine.js"></script>
 <script type="text/javascript" src="./assetmanager.js"></script>
 <script type="text/javascript" src="./main.js"></script>
